tests/failing/lifetime_hoist.db
print(name)! //Luke
const const name<-1> = "Luke"!